# notes

./: kleisli_category.md  pyproject.toml
.github/workflows/: test.yml
notes/: __init__.py  kleisli_category.py  pattern_matching.md
src/: __init__.py  kleisli_category.py
tests/: test_kleisli_category.py
