[project]
name = "notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jayden filippi", email = "jaydenjfilippi@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
