[project]
name = "notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jayden filippi", email = "jaydenjfilippi@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.3.5",
    "pytest-benchmark>=5.1.0",
    "pytest-xdist>=3.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13"]
